@@ -97,6 +97,7 @@
 			com/sun/mail/imap/MessageVanishedEvent.java,
 			com/sun/mail/imap/ModifiedSinceTerm.java,
 			com/sun/mail/imap/IdleManager.java,
+			com/sun/mail/imap/ReferralException.java,
 			com/sun/mail/pop3/POP3Store.java,
 			com/sun/mail/pop3/POP3SSLStore.java,
 			com/sun/mail/pop3/POP3Folder.java,
